<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Constraint layout preferred because it is dynamic and responsive -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/shoe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/shoe_name" />

                <TextView
                    android:id="@+id/shoe_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@id/shoe_name"
                    app:layout_constraintStart_toStartOf="@id/shoe_name"
                    app:layout_constraintTop_toBottomOf="@id/shoe_name"
                    tools:text="@string/shoe_company" />

                <TextView
                    android:id="@+id/shoe_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@id/shoe_company"
                    app:layout_constraintStart_toStartOf="@id/shoe_company"
                    app:layout_constraintTop_toBottomOf="@id/shoe_company"
                    tools:text="@string/shoe_size" />

                <TextView
                    android:id="@+id/shoe_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@id/shoe_size"
                    app:layout_constraintStart_toStartOf="@id/shoe_size"
                    app:layout_constraintTop_toBottomOf="@id/shoe_size"
                    tools:text="@string/shoe_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>